[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/box.gd" type="Script" id=1]
[ext_resource path="res://scripts/box_sm.gd" type="Script" id=2]
[ext_resource path="res://tilesets/tileset_16.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32.0681, 25.0531 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 35.7574, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 27.5882, 10 )

[node name="box" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="box_sm" type="Node" parent="."]
script = ExtResource( 2 )

[node name="sprite_topo" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
offset = Vector2( 0, -8 )
vframes = 128
hframes = 4
frame = 280

[node name="sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
offset = Vector2( 0, 8 )
vframes = 128
hframes = 4
frame = 284

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Area2D_bottom" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_bottom"]
position = Vector2( 0, 16 )
shape = SubResource( 3 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Area2D_bottom" to="." method="_on_Area2D_bottom_body_entered"]
